Fixes timeseries dark mode legend colors

--- a/http_src/views/private/clients/dark-mode.scss
+++ b/http_src/views/private/clients/dark-mode.scss
@@ -820,10 +820,6 @@ table.dataTable thead th.sorting::after {
   color: #E2E2E2;
 }
 
-.dygraph-legend {
-  background: #E2E2E2;
-}
-
 .form-check-label {
   color: #E2E2E2;
 }
