--- a/http_src/views/private/clients/white-mode.scss
+++ b/http_src/views/private/clients/white-mode.scss
@@ -19,6 +19,8 @@
   --loading-bg: rgba(243, 244, 246, 0.9);
   --loading-text-color: #374151;
   --loading-spinner-border: #6B7280;
+  --timeseries-legend-bg-color: #FFFFFF;
+  --timeseries-legend-border-color: #A7A6A6;
 }
 
 /* Dark-Mode */
@@ -27,6 +29,8 @@
   --loading-bg: #28242C;
   --loading-text-color: #E2E8F0;
   --loading-spinner-border: #334155;
+  --timeseries-legend-bg-color: #212529;
+  --timeseries-legend-border-color: #A7A6A6;
 }
 
 a,
